--- a/applications/monitoring.yaml
+++ b/applications/monitoring.yaml
@@ -1,16 +1,16 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: guestbook
+  name: argocd
   namespace: argocd
 spec:
   project: default
   source:
-    repoURL: https://github.com/arjunavinfra/applications.git
+    repoURL: https://github.com/arjunavinfra/prometheus-operator.git
     targetRevision: HEAD
-    path: argocd 
+    path: install 
   destination:
     server: https://kubernetes.default.svc
-    namespace: default
+    namespace: monitoring
 
     
