--- a/applications/guestbook.yaml
+++ b/applications/guestbook.yaml
@@ -3,6 +3,9 @@ kind: Application
 metadata:
   name: guestbook
   namespace: argocd
+  labels:
+    app: sample 
+    entity: test
 spec:
   project: default
   source:
