--- a/applications/monitoring.yaml
+++ b/applications/monitoring.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/arjunavinfra/prometheus-operator.git
+    repoURL: git@github.com:arjunavinfra/prometheus-operator.git
     targetRevision: HEAD
     path: manifests 
   destination:
