corrected the issue

--- a/Install/base/kustomization.yaml
+++ b/Install/base/kustomization.yaml
@@ -4,5 +4,6 @@ kind: Kustomization
 namespace: argocd
 resources:
   - namespace.yaml
-  - install.yaml
+  - argocd-crd-operator.yaml
+  - applicationset-crd.yaml
 
