--- a/applications/argocd.yaml
+++ b/applications/argocd.yaml
@@ -15,5 +15,6 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
-
-    
+  syncPolicy:
+    syncOptions:
+    - CreateNamespace=true
