--- a/applicationSet/observability.yaml
+++ b/applicationSet/observability.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: cluster-addons
+  name: obserability-app-set
   namespace: argocd
 spec:
   goTemplate: true
