--- a/Install/overlay/kustomization.yaml
+++ b/Install/overlay/kustomization.yaml
@@ -2,8 +2,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: argocd
+bases:
+  - ../base
 resources:
-  - ./overlay
-  - ../applications
-  - ../projects
-  - ../applicationSet
+  - repository-ssh-key.yaml
+
+# patchesStrategicMerge:
+#   - configmap-health.yaml
