--- a/applicationSet/guestbook.yaml
+++ b/applicationSet/guestbook.yaml
@@ -26,3 +26,6 @@ spec:
       syncPolicy:
         syncOptions:
         - CreateNamespace=true
+        automated:
+          selfHeal: true
+          prune: true
