--- a/applications/argocd.yaml
+++ b/applications/argocd.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: argocd
   labels:
     app: argocd 
-    entity: ci
+    entity: ci-cd 
 spec:
   project: default
   source:
@@ -18,3 +18,6 @@ spec:
   syncPolicy:
     syncOptions:
     - CreateNamespace=true
+    automated:
+      selfHeal: true
+      prune: true
