--- a/applicationSet/guestbook.yaml
+++ b/applicationSet/guestbook.yaml
@@ -1,23 +1,23 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: cluster-addons
+  name: guestbook-app-set
   namespace: argocd
 spec:
   goTemplate: true
   generators:
   - git:
-      repoURL: https://github.com/argoproj/argo-cd.git
+      repoURL: git@github.com:arjunavinfra/app-podinfo.git
       revision: HEAD
       directories:
-      - path: applicationset/examples/git-generator-directory/cluster-addons/*
+      - path: kustomize/*
   template:
     metadata:
       name: '{{.path.basename}}'
     spec:
-      project: "my-project"
+      project: "default"
       source:
-        repoURL: https://github.com/argoproj/argo-cd.git
+        repoURL: git@github.com:arjunavinfra/app-podinfo.git
         targetRevision: HEAD
         path: '{{.path.path}}'
       destination:
