--- a/applicationSet/guestbook.yaml
+++ b/applicationSet/guestbook.yaml
@@ -6,17 +6,36 @@ spec:
   goTemplate: true
   generators:
   - git:
-      repoURL: git@github.com:arjunavinfra/app-podinfo.git
+      repoURL: git@github.com:arjunavinfra/applications.git
       revision: HEAD
       directories:
-      - path: deploy/webapp/*
+      - path: podinfo/deploy/webapp/*
+      # - path: charts
+      #   exclude: true
+      # - path: cmd
+      #   exclude: true  
+      # - path: cue
+      #   exclude: true    
+      # cmd 
+      # cue 
+      # deploy/bases
+      # deploy/overlays 
+      # deploy/secure 
+      # deploy/webapp
+      # kustomize 
+      # otel
+      # pkg 
+      # test ui
   template:
     metadata:
       name: '{{.path.basename}}'
+      labels:
+        entity: app
+        app: '{{.path.path}}'  
     spec:
       project: "default"
       source:
-        repoURL: git@github.com:arjunavinfra/app-podinfo.git
+        repoURL: git@github.com:arjunavinfra/applications.git
         targetRevision: HEAD
         path: '{{.path.path}}'
       destination:
