--- a/Install/overlay/kustomization.yaml
+++ b/Install/overlay/kustomization.yaml
@@ -5,7 +5,9 @@ namespace: argocd
 bases:
   - ../base
 resources:
-  - repository-ssh-key.yaml
+  - git-repositories.yaml
+  - helm-repositories.yaml
 
 patchesStrategicMerge:
-  - configmap-health.yaml
+  - argocd-cm.yaml
+  - argocd-rbac-cm.yaml
