--- a/Install/overlay/argocd/argocd-cm.yaml
+++ b/Install/overlay/argocd/argocd-cm.yaml
@@ -3,14 +3,13 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: argocd-cm
-  namespace: argocd
   labels:
     app.kubernetes.io/name: argocd-cm
     app.kubernetes.io/part-of: argocd
 data:
-  accounts.alice: apiKey, login
-  # disables user. User is enabled by default
-  accounts.alice.enabled: "true"
+  # accounts.alice: apiKey, login
+  # # disables user. User is enabled by default
+  # accounts.alice.enabled: "true"
 
   resource.customizations.health.argoproj.io_Application: |
     hs = {}
