--- a/Install/overlay/argocd/argocd-rbac-cm.yaml
+++ b/Install/overlay/argocd/argocd-rbac-cm.yaml
@@ -2,7 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: argocd-rbac-cm
-  namespace: argocd
   labels:
     app.kubernetes.io/name: argocd-rbac-cm
     app.kubernetes.io/part-of: argocd
@@ -24,12 +23,12 @@ data:
   # but will see no apps, projects, etc...
   policy.default: role:readonly
 
-  # scopes controls which OIDC scopes to examine during rbac enforcement (in addition to `sub` scope).
-  # If omitted, defaults to: '[groups]'. The scope value can be a string, or a list of strings.
-  scopes: '[cognito:groups, email]'
+  # # scopes controls which OIDC scopes to examine during rbac enforcement (in addition to `sub` scope).
+  # # If omitted, defaults to: '[groups]'. The scope value can be a string, or a list of strings.
+  # scopes: '[cognito:groups, email]'
 
-  # matchMode configures the matchers function for casbin.
-  # There are two options for this, 'glob' for glob matcher or 'regex' for regex matcher. If omitted or mis-configured,
-  # will be set to 'glob' as default.
-  policy.matchMode: 'glob'
+  # # matchMode configures the matchers function for casbin.
+  # # There are two options for this, 'glob' for glob matcher or 'regex' for regex matcher. If omitted or mis-configured,
+  # # will be set to 'glob' as default.
+  # policy.matchMode: 'glob'
 
