--- a/Install/overlay/argocd/kustomization.yaml
+++ b/Install/overlay/argocd/kustomization.yaml
@@ -1,13 +1,16 @@
 # kustomization.yaml
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: argocd
+
+bases:
+  - ../../base/
 
 resources:
   - git-repositories.yaml
   - helm-repositories.yaml
+  # - argocd-cm.yaml
 
-patchesStrategicMerge:
-  - argocd-cm.yaml
-  - argocd-rbac-cm.yaml
-  # - argocd-secret.yaml
+# patchesStrategicMerge:
+#     - argocd-cm.yaml
+# #   - argocd-rbac-cm.yaml
+#   # - argocd-secret.yaml
