--- a/applications/nginx-helm.yaml
+++ b/applications/nginx-helm.yaml
@@ -17,4 +17,9 @@ spec:
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: default
-  syncPolicy: {}
+  syncPolicy:
+    syncOptions:
+    - CreateNamespace=true
+    automated:
+      selfHeal: true
+      prune: true
