fixed the issue

--- a/Install/overlay/argocd/kustomization.yaml
+++ b/Install/overlay/argocd/kustomization.yaml
@@ -15,7 +15,9 @@ resources:
   
   # - argocd-cm.yaml
 
-# patchesStrategicMerge:
-#     - argocd-cm.yaml
+patchesStrategicMerge:
+   - argocd-cm.yaml
+   - argocd-repo-server-deploy.yaml
+   
 # #   - argocd-rbac-cm.yaml
 #   # - argocd-secret.yaml
