--- a/Install/overlay/argocd/kustomization.yaml
+++ b/Install/overlay/argocd/kustomization.yaml
@@ -8,7 +8,7 @@ bases:
 resources:
   - git-repositories.yaml
   - helm-repositories.yaml
-
+  - argocd-vault-plugin-credentials.yaml #vault credentials
 
 
 
