--- a/applications/hashicorp-vault.yaml
+++ b/applications/hashicorp-vault.yaml
@@ -1,25 +1,31 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: hc-vault
-  labels:
-    app: vault 
-    entity: secete
+  name: vault
 spec:
-  project: default
-  source:
-    repoURL: 'https://helm.releases.hashicorp.com'
-    targetRevision: 1.12.1
-    # helm:
-    #   valueFiles:
-    #     - values.yaml
-    chart: vault
   destination:
-    server: 'https://kubernetes.default.svc'
+    name: ''
     namespace: hashicorp-vault
+    server: 'https://kubernetes.default.svc'
+  source:
+    path: ''
+    repoURL: 'https://helm.releases.hashicorp.com'
+    targetRevision: 0.23.0
+    chart: vault
+    helm:
+      valueFiles:
+        - values.yaml
+      parameters:
+        - name: ui.serviceType
+          value: LoadBalancer
+        - name: server.dataStorage.size
+          value: 5Gi
+        - name: server.auditStorage.size
+          value: 5Gi
+  project: default
   syncPolicy:
-    syncOptions:
-    - CreateNamespace=true
     automated:
-      selfHeal: true
       prune: true
+      selfHeal: true
+    syncOptions:
+      - PruneLast=true
