--- a/applications/bitnami.yaml
+++ b/applications/bitnami.yaml
@@ -1,6 +1,8 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
+  annotations:
+    notifications.argoproj.io/subscribe.on-sync-succeeded.slack: ci-cd-notifications
   name: bitnami
   labels:
     app: bitnami 
