--- a/applications/hashicorp-vault.yaml
+++ b/applications/hashicorp-vault.yaml
@@ -18,4 +18,7 @@ spec:
           value: 'true'
         - name: server.ha.replicas
           value: '3'
+        - name: ui.serviceType
+          value: LoadBalancer
+
   project: control-tec
