--- a/applications/hashicorp-vault.yaml
+++ b/applications/hashicorp-vault.yaml
@@ -20,7 +20,7 @@ spec:
           value: '3'
         - name: ui.serviceType
           value: LoadBalancer
-  project: control-tec
+  project: default
   syncPolicy:
     syncOptions:
     - CreateNamespace=true
