--- a/Install/overlay/argocd-vault-plugin-credentials.yaml
+++ b/Install/overlay/argocd-vault-plugin-credentials.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 data:
-  VAULT_ADDR: Zm9v
-  AVP_AUTH_TYPE: Zm9v
-  AVP_GITHUB_TOKEN: Zm9v
-  AVP_TYPE: Zm9v
+  VAULT_ADDR: aHR0cDovL3ZhdWx0LnN2Yy5jbHVzdGVyLmxvY2FsOjgyMDAK #http://vault.svc.cluster.local:8200
+  VAULT_TOKEN: aHZzLktQREVhNVJXR2Q2N2xYREN0N3Uzd2hxWgo= #hvs.KPDEa5RWGd67lXDCt7u3whqZ 
+  AVP_AUTH_TYPE: dmF1bHQK #vault
+  AVP_TYPE: dG9rZW4K #token
 kind: Secret
 metadata:
   name: argocd-vault-plugin-credentials
