Modified the file!

--- a/Install/overlay/argocd-vault-plugin-credentials.yaml
+++ b/Install/overlay/argocd-vault-plugin-credentials.yaml
@@ -9,3 +9,5 @@ metadata:
   name: argocd-vault-plugin-credentials
   namespace: argocd
 type: Opaque
+
+#For Vault Token Authentication, these are the required parameters:
