--- a/applications/hashicorp-vault.yaml
+++ b/applications/hashicorp-vault.yaml
@@ -2,16 +2,16 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: vault
+  namespace: argocd
 spec:
   destination:
-    name: ''
-    namespace: vault
-    server: 'https://kubernetes.default.svc'
+    namespace: argocd
+    server: https://kubernetes.default.svc 
+  project: default
   source:
-    path: ''
     repoURL: 'https://helm.releases.hashicorp.com'
-    targetRevision: 0.23.0
     chart: vault
+    targetRevision: 0.15.0
     helm:
       parameters:
         # - name: server.ha.enabled
@@ -26,7 +26,27 @@ spec:
           value: '8200'
         - name: ui.externalPort
           value: '8200'
-  project: default
+      releaseName: vault
+      values: |
+        injector:
+          enabled: false
+        server:
+          dev:
+            enabled: true
+          postStart:
+            - /bin/sh
+            - -c
+            - |
+              sleep 10s &&\
+              printf 'path "secret/*"{\ncapabilities=["read"]\n}' | vault policy write argocd - &&\
+              vault auth enable kubernetes &&\
+              vault write auth/kubernetes/config\
+                kubernetes_host=https://kubernetes.default.svc \
+                disable_iss_validation=true &&\
+              vault write auth/kubernetes/role/argocd \
+                bound_service_account_names=argocd-repo-server \
+                bound_service_account_namespaces=argocd \
+                policies="argocd"
   syncPolicy:
     syncOptions:
     - CreateNamespace=true
